YETUS-1271. Upgrade to Ubuntu 24.04 (Noble)